# sgm

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jamfile  LICENSE  NOTES_BUILD_IN_SIERRA  README.md  SGMFunctions.cmake
Apps/: CMakeLists.txt  MainRunTests.cpp
Docs/: SGMUserManual.docx  cube-morph_mesher-sgm-example  cube-morph_mesher-sgm-example-tv  linux-build.txt  ngs-sgm.txt  ~$M User Manual.docx
ModelViewer/: CMakeLists.txt  FileMenu.cpp  FileMenu.hpp  GGeomInterfaceImpl.cpp  GGeomInterfaceImpl.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ModelData.cpp  ModelData.hpp  PrimitiveMenu.cpp  PrimitiveMenu.hpp  QVTKInteractor.h  QVTKInteractorAdapter.h  QVTKOpenGLWidget.cxx  QVTKOpenGLWidget.h  SGMGraphicsWidget.cpp  SGMGraphicsWidget.hpp  SGMPropertiesWidget.cpp  SGMPropertiesWidget.hpp  SGMTreeWidget.cpp  SGMTreeWidget.hpp  TestDialog.cpp  TestDialog.hpp  TestMenu.cpp  TestMenu.hpp  ViewMenu.cpp  ViewMenu.hpp  buffer.h  main.cpp
Source/: Body.cpp  Booleans.cpp  BoxTree.cpp  CMakeLists.txt  Checker.cpp  Circle.cpp  Complex.cpp  Cone.cpp  Conic.cpp  Curve.cpp  Cylinder.cpp  DataClasses.cpp  Edge.cpp  Ellipse.cpp  Entity.cpp  EntityFunctions.cpp  Extrude.cpp  Face.cpp  Faceter.cpp  FileFunctions.cpp  Graph.cpp  Hermite.cpp  Hyperbola.cpp  InternalMath.cpp  Interrogate.cpp  Intersectors.cpp  Line.cpp  Mathematics.cpp  NUBCurve.cpp  NUBSurface.cpp  NURBCurve.cpp  NURBSurface.cpp  Offset.cpp  Options.cpp  OrderPoints.cpp  Parabola.cpp  Plane.cpp  PointCurve.cpp  Polygon.cpp  Primatives.cpp  (+32 more)
Source/Headers/: BoxTree.h  Curve.h  EdgeData.h  EntityClasses.h  EntityFunctions.h  FacetToBRep.h  Faceter.h  FileFunctions.h  Graph.h  Interrogate.h  Intersectors.h  Mathematics.h  Modify.h  OrderPoints.h  Primitive.h  Query.h  ReadFile.h  STEP.h  STL.h  Signature.h  Surface.h  Topology.h  VertexData.h  buffer.h  parallel_stable_sort.h  pss_common.h
Source/Headers/Inline/: Curve.inl  EntityClasses.inl  Surface.inl
Source/Headers/Util/: bounded_priority_queue.h  buffer.h  parallel_sort.h  parallel_sort_details.h  shared_mutex.h  timer.h
Source/Public Headers/: SGMChecker.h  SGMComplex.h  SGMDisplay.h  SGMEntityClasses.h  SGMEnums.h  SGMFileIO.h  SGMQuery.h  SGMTopology.h  SGMTree.h
Source/Public_Headers/: SGMAttribute.h  SGMBounded.h  SGMBoxTree.h  SGMChecker.h  SGMComplex.h  SGMConstants.h  SGMDataClasses.h  SGMDisplay.h  SGMEntityClasses.h  SGMEntityFunctions.h  SGMEnums.h  SGMFacetToBReps.h  SGMGeometry.h  SGMGraph.h  SGMInterrogate.h  SGMIntersecors.h  SGMIntersector.h  SGMInterval.h  SGMMathematics.h  SGMMeasure.h  SGMMemoryPool.h  SGMModify.h  SGMPointTree.h  SGMPolygon.h  SGMPrimatives.h  SGMPrimitives.h  SGMQuery.h  SGMResult.h  SGMSegment.h  SGMSharedMutex.h  SGMThreadPool.h  SGMTopology.h  SGMTransform.h  SGMTranslators.h  SGMTree.h  SGMTriangle.h  SGMVector.h
Source/Public_Headers/Inline/: SGMBounded.inl  SGMBoxTree.inl  SGMInterval.inl  SGMPointTree.inl  SGMSegment.inl  SGMTransform.inl  SGMTriangle.inl  SGMVector.inl
Tests/: Block Cylinder On One Side.txt  Boolean_check.cpp  CMakeLists.txt  FindCloseEdges and Faces.txt  Function Test Create Block Save As STL.txt  Function Test Create Sphere Save As STL.txt  Function Test Find Close Edges and Faces.txt  Part Test Block Cylinder On One Side.txt  Part Test Web Cut Sphere.txt  ThreadPool.h  Unit Test Curve Circle.txt  Unit Test Curve Line.txt  Unit Test Curve NUB.txt  Unit Test Function Create NUB Curve  With End Vecs 2 Points.txt  Unit Test Function Create NUB Curve  With End Vecs 3 Points.txt  Unit Test Function Create NUB Curve  With End Vecs 4 Points.txt  Unit Test Function Create NUB Curve Degree 1.txt  Unit Test Function Create NUB Curve Degree 2.txt  Unit Test Function Create NUB Curve Degree 3.txt  Unit Test Intersection NUBCurve Line.txt  Unit Test Intersection Torus Line.txt  Unit Test Intersection Transformed Torus Line.txt  Unit Test Math Banded Matrix Solve.txt  Unit Test Math Cubic.txt  Unit Test Math Curvature.txt  Unit Test Math Least Squares Plane.txt  Unit Test Math Linear Matrix Solve.txt  Unit Test Math Quartic.txt  Unit Test Math Transforms.txt  Unit Test Math Tridiagonal Solve.txt  Unit Test Revolve 1 Face Away From Seam.txt  Unit Test Revolve 2 Edges No Vertex.txt  Unit Test Revolve 2 Edges With Vertices.txt  Unit Test Surface Cone.txt  Unit Test Surface Cylinder.txt  Unit Test Surface NUBSurface.txt  Unit Test Surface Plane.txt  Unit Test Surface Revolve.txt  Unit Test Surface Sphere.txt  Unit Test Surface Torus.txt  (+25 more)
Tests/Model Tests/: models_check.cpp
Tests/Profiling/: boxtree_timing.cpp
Tests/STEP Parts/: Arc.stp  Block Cylinder On One Side.stp  Cone.stp  Cylinder Face.stp  Hyperbola.stp  Lemon Torus.stp  Line.stp  Mouse Face.stp  NUBCurve.stp  Parabola.stp  Pinched Torus.stp  Revolve.stp  Sphere Face.stp  Sphere.stp  Square with rounded side inverted.stp  Square with rounded side.stp  Torus Apple.stp  Torus Donut.stp  Torus Knot.stp  Torus Lemon.stp  Torus Pinched.stp  Web Cut Sphere.stp  brick10.stp  bulge.stp  cube.stp  quarter_sphere.stp
Tests/STL Parts/: Block Cylinder On One Side.stl  Block.stl  Sphere.stl  Torus.stl  Web Cut Sphere.stl
Tests/Test Answers/: Block Cylinder On One Side.stl  Block.stl  Line.stp  Sphere.stl  Web Cut Sphere.stl
Tests/Working On/: Create Block Save As STEP.txt  Read STEP Block.txt  Sphere.txt
Tests/lib/googletest-release-1.8.0/: CMakeLists.txt
Tests/lib/googletest-release-1.8.0/googlemock/: CMakeLists.txt
Tests/lib/googletest-release-1.8.0/googletest/: CMakeLists.txt
